# prisma-erp

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.myinvois  README.md  architecture.html  bash.exe.stackdump  debug_step1.py  deep_search_icons.py  deploy-ec2.sh  deploy-test-page.sh  final_module_icon_fix.py  find_einvoice.py  fix.md  fix_einvoice_revert.py  fix_ess_icon.py  gemini.md  get-tunnel-url.bat  patch_hooks.py  patch_hooks_v2.py  prd-prisma-assistant.json  prd.json  prd.json.bak  prd.md  prisma-erp-key.pem  progress.txt  pwd-myinvois.yml  ralph-config.sh  replace_frappe_icons.py  restore_erp_settings.sql  restore_erp_sidebar_items.sql  retry-counts.json  setup_demo_data.py  setup_full_data.py  setup_sample_data.py  setup_test_data.py  spiral.config.sh  spiral.sh  sql_icon_fix.py  (+20 more)
.gitnexus/: meta.json
docs/: ERPNext LHDN Payroll E-Invoice Integration.md
frappe_patches/: frappe.conf.template  login.html  login.js  login.py
lhdn_payroll_integration/: .pre-commit-config.yaml  README.md  (+2 more)
prisma_assistant/: MANIFEST.in  README.md  pyproject.toml
prisma_assistant/prisma_assistant/: configure_ai_settings.py  hooks.py  install.py  modules.txt
prisma_assistant/prisma_assistant/api/: chat.py
prisma_assistant/prisma_assistant/prisma_assistant/doctype/prisma_ai_settings/: prisma_ai_settings.js  prisma_ai_settings.json  prisma_ai_settings.py
prisma_assistant/prisma_assistant/public/css/: desk_widget.css
prisma_assistant/prisma_assistant/public/js/: desk_widget.js  title_override.js
prisma_assistant/prisma_assistant/www/: test.html  test.py
(+811 files in other folders)
