[project]
name = "prisma_assistant"
authors = [{ name = "Prisma Technology", email = "admin@prismatechnology.com" }]
description = "Prisma AI Assistant — general-purpose AI chat for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
